--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,7 @@
+html {
+  width: 100%;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   color: #999;
